--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,26 @@
     <string name="google_maps_api_key">AIzaSyD8EgP1fkV57Xgf9FzxdHp0pGp4AduZN1I</string>
     <string name="facebook_app_id">1970901759835764</string>
     <string name="fb_login_protocol_scheme">fb1970901759835764</string>
+    <string name="r_email">Email</string>
+    <string name="r_username">Username</string>
+    <string name="r_password">Password</string>
+    <string name="r_address">Zipcode</string>
+    <string name="r_phone">Phone Number</string>
+    <string name="registerBtn">Sign up</string>
+    <string name="forgot">Forgot Password?</string>
+    <string name="cont">Confirm and continue</string>
+    <string name="finalstep">One last step before continuing. \nZip code is required in order for the app to work properly.</string>
+    <string name="cancel">Cancel</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_store">Stores</string>
+    <string name="title_chat">Chats</string>
+    <string name="title_bookmark">Bookmarks</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_activity_sample_action_bar">SampleActionBar</string>
+    <string name="title_activity_facebook_register">FacebookRegisterActivity</string>
 
 </resources>
